*** empty log message ***

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -2043,6 +2043,12 @@ configuration files.
 
 * Lisp Changes in Emacs 21.4
 
+** The sentinel is now called whan a network process is deleted with
+delete-process.  The status message passed to the sentinel for a
+deleted network process is "deleted".  The message passed to the
+sentinel when the connection is closed by the remote peer has been
+changed to "connection broken by remote peer".
+
 ** If the buffer's undo list for the current command gets longer than
 undo-outer-limit, garbage collection empties it.  This is to prevent
 it from using up the available memory and choking Emacs.
