*** empty log message ***

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-07  Luc Teirlinck  <teirllm@auburn.edu>
+
+	* dired.el (dired-undo): Call `dired-build-subdir-alist'.
+	Limit scope of `buffer-read-only' binding.
+
 2004-06-06  Emilio C. Lopes  <eclig@gmx.net>
 
 	* eshell/esh-cmd.el (eshell/which): Respect commands quoted with
