--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-07  Juanma Barranquero  <lektu@terra.es>
+
+	* editfns.c (Fuser_login_name, Ffloat_time, Fencode_time)
+	(Fcurrent_time_string, Fcurrent_time_zone)
+	(Finsert_buffer_substring, Ftranspose_regions): Doc fixes.
+
 2004-06-07  Miles Bader  <miles@gnu.org>
 
 	* xfaces.c (struct named_merge_point): New type.
