* saveplace.el (save-place-alist-to-file): Bind `print-length'   and `print-level' to nil when writing out `save-place-alist'.   Thanks to Kai Grossjohann <kai@emptydomain.de> for enlightenment.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-07  Karl Fogel  <kfogel@red-bean.com>
+
+	* saveplace.el (save-place-alist-to-file): Bind `print-length'
+	and `print-level' to nil when writing out `save-place-alist'.  
+	Thanks to Kai Grossjohann <kai@emptydomain.de> for enlightenment.
+	
 2004-06-07  Juanma Barranquero  <lektu@terra.es>
 
 	* completion.el (completion-kill-region): Doc fix.
