Revision: miles@gnu.org--gnu-2004/emacs--cvs-trunk--0--patch-385
src/xfaces.c (push_named_merge_point): Return 0 if a cycle is detected

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-08  Miles Bader  <miles@gnu.org>
+
+	* xfaces.c (push_named_merge_point): Return 0 when a cycle is detected.
+
 2004-06-07  Juanma Barranquero  <lektu@terra.es>
 
 	* editfns.c (Fuser_login_name, Ffloat_time, Fencode_time)
