* toolbar/copy-locol.xpm, toolbar/cut-locol.xpm 	* toolbar/help-locol.xpm, toolbar/home-locol.xpm 	* toolbar/index-locol.xpm, toolbar/jump_to-locol.xpm 	* toolbar/left_arrow-locol.xpm toolbar/new-locol.xpm 	* toolbar/open-locol.xpm, toolbar/paste-locol.xpm 	* toolbar/preferences-locol.xpm, toolbar/print-locol.xpm 	* toolbar/right_arrow-locol.xpm toolbar/save-locol.xpm 	* toolbar/saveas-locol.xpm, toolbar/search-locol.xpm 	* toolbar/spell-locol.xpm, toolbar/undo-locol.xpm 	* toolbar/up_arrow-locol.xpm: 	New versions of icons that uses fewer colors.
	* toolbar/tool-bar.el (tool-bar-local-item)
	(tool-bar-local-item-from-menu): Try to use icons with fewer colors
	if display-color-cells is 256 or less.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,21 @@
+2004-06-08  Jan Dj,Ad(Brv  <jan.h.d@swipnet.se>
+
+	* toolbar/copy-locol.xpm, toolbar/cut-locol.xpm
+	* toolbar/help-locol.xpm, toolbar/home-locol.xpm
+	* toolbar/index-locol.xpm, toolbar/jump_to-locol.xpm
+	* toolbar/left_arrow-locol.xpm toolbar/new-locol.xpm
+	* toolbar/open-locol.xpm, toolbar/paste-locol.xpm
+	* toolbar/preferences-locol.xpm, toolbar/print-locol.xpm
+	* toolbar/right_arrow-locol.xpm toolbar/save-locol.xpm
+	* toolbar/saveas-locol.xpm, toolbar/search-locol.xpm
+	* toolbar/spell-locol.xpm, toolbar/undo-locol.xpm
+	* toolbar/up_arrow-locol.xpm:
+	New versions of icons that uses fewer colors.
+	
+	* toolbar/tool-bar.el (tool-bar-local-item)
+	(tool-bar-local-item-from-menu): Try to use icons with fewer colors
+	if display-color-cells is 256 or less.
+
 2004-06-08  Kim F. Storm  <storm@cua.dk>
 
 	* wid-edit.el (widget-specify-button): Use hand pointer rather
