--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,11 @@
+2004-06-08  Daniel Pfeiffer  <occitan@esperanto.org>
+
+	* progmodes/compile.el (compilation-set-window-height): Rearrange
+	the save-* functions because a buffer can have several current
+	point in different windows.
+	(compilation-error-regexp-alist-alist): Recognize {standard input}
+	GNU messages (for gcc --pipe) and more kinds of Oracle messages.
+
 2004-06-08  Jan Dj,Ad(Brv  <jan.h.d@swipnet.se>
 
 	* toolbar/copy-locol.xpm, toolbar/cut-locol.xpm
@@ -11,7 +19,7 @@
 	* toolbar/spell-locol.xpm, toolbar/undo-locol.xpm
 	* toolbar/up_arrow-locol.xpm:
 	New versions of icons that uses fewer colors.
-	
+
 	* toolbar/tool-bar.el (tool-bar-local-item)
 	(tool-bar-local-item-from-menu): Try to use icons with fewer colors
 	if display-color-cells is 256 or less.
