--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-10  Kim F. Storm  <storm@cua.dk>
+
+	* pcl-cvs.texi (Viewing differences): Add 'd y'.
+
 2004-06-10  Juri Linkov  <juri@jurta.org>
 
 	* building.texi (Lisp Eval): Add C-M-x on defface.
