--- a/etc/ChangeLog
+++ b/etc/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-10  Lars Hansen  <larsh@math.ku.dk>
+
+	* NEWS: Describe dired-omit-mode. Describe desktop package changes.
+
 2004-05-29  Steven Tamm  <steventamm@mac.com>
 
 	* PROBLEMS: Document the workaround for the Mac OS X port not
