--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-10  Juanma Barranquero  <lektu@terra.es>
+
+	* newcomment.el (comment-search-forward)
+	(comment-search-backward): Fix typos in docstring.
+	(comment-region): Doc fix.
+
 2004-06-10  Luc Teirlinck  <teirllm@auburn.edu>
 
 	* dired.el (dired-insert-old-subdirs): Adapt to fact that the R
