--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-11  David Kastrup  <dak@gnu.org>
+
+	* search.c (match_limit): Don't flag an error if match-data
+	exceeding the allocated search_regs.num_regs gets requested, just
+	return Qnil.
+
 2004-06-08  Miles Bader  <miles@gnu.org>
 
 	* xfaces.c (push_named_merge_point): Return 0 when a cycle is detected.
