Revision: miles@gnu.org--gnu-2004/emacs--cvs-trunk--0--patch-397
Work around vc-arch problems when building eshell

2004-06-10  Miles Bader  <miles@gnu.ai.mit.edu>

   * lisp/eshell/esh-module.el (eshell-load-defgroups): Bind
   `vc-handled-backends' to nil when opening files.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-10  Miles Bader  <miles@gnu.ai.mit.edu>
+
+	* eshell/esh-module.el (eshell-load-defgroups): Bind
+	`vc-handled-backends' to nil when opening files.
+
 2004-06-11  Juanma Barranquero  <lektu@terra.es>
 
 	* files.el (parse-colon-path, cd): Doc fixes (refer to
