--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,11 @@
+2004-06-11  Luc Teirlinck  <teirllm@auburn.edu>
+
+	* dired.el (dired-revert): If buffer is marked unmodified before
+	reverting, keep it marked unmodified.
+	Adapt to new conventions for commenting out code.
+	(dired-make-relative): Adapt to new conventions for commenting out
+	code.
+
 2004-06-10  Miles Bader  <miles@gnu.ai.mit.edu>
 
 	* eshell/esh-module.el (eshell-load-defgroups): Bind
